--- a/PongGame/app/src/main/res/navigation/nav_graph.xml
+++ b/PongGame/app/src/main/res/navigation/nav_graph.xml
@@ -41,6 +41,17 @@
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
+        android:id="@+id/ForgotPasswordFragment"
+        android:name="com.example.ponggame.fragments.ForgotPasswordFragment"
+        android:label="fragment_forgot_password"
+        tools:layout="@layout/fragment_forgot_password">
+        <action
+            android:id="@+id/action_forgotPasswordFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/nav_graph.xml"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.ponggame.fragments.LoginFragment"
         android:label="LoginFragment" >
@@ -52,6 +63,9 @@
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
+            app:destination="@id/ForgotPasswordFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
