--- a/PongGame/app/src/main/res/layout/fragment_home_page.xml
+++ b/PongGame/app/src/main/res/layout/fragment_home_page.xml
@@ -6,19 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/home"
     tools:context=".fragments.HomePageFragment">
 
-    <Button
+    <ImageView
         android:id="@+id/press_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Press to start"
-        app:cornerRadius="24dp"
+        android:layout_width="240dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:srcCompat="@drawable/home_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
