--- a/PongGame/app/src/main/res/layout/fragment_ranking_list.xml
+++ b/PongGame/app/src/main/res/layout/fragment_ranking_list.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:padding="16dp"
+        android:background="@color/black"
         tools:listitem="@layout/item_view" />
 
 </FrameLayout>
