--- a/PongGame/app/src/main/res/values-night/themes.xml
+++ b/PongGame/app/src/main/res/values-night/themes.xml
@@ -10,7 +10,9 @@
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/purple_700</item>
         <!-- Customize your theme here. -->
+        <item name="fontFamily">@font/esfnormal</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
