app graphic updated

--- a/PongGame/app/src/main/res/layout/fragment_home_page.xml
+++ b/PongGame/app/src/main/res/layout/fragment_home_page.xml
@@ -18,6 +18,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/home_button" />
+        app:srcCompat="@drawable/home_button"
+        android:clickable="true"
+        android:focusable="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
