--- a/PongGame/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/PongGame/app/src/main/res/layout/fragment_forgot_password.xml
@@ -41,6 +41,19 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+    <ImageView
+        android:id="@+id/pw_reset"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email_field"
+        app:srcCompat="@drawable/reset_password"
+        android:clickable="true"
+        android:focusable="true" />
+    <!--
             <Button
                 android:id="@+id/pw_reset"
                 android:layout_width="320dp"
@@ -52,30 +65,36 @@
                 app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/email_field" />
+    -->
 
             <Button
                 android:id="@+id/login_button"
-                android:layout_width="160dp"
+                android:layout_width="wrap_content"
                 android:layout_height="35dp"
-                android:layout_marginStart="192dp"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="150dp"
                 android:background="@android:color/transparent"
                 android:gravity="center"
                 android:text="Log in"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 android:textAlignment="center"
                 android:textColor="@color/purple_700"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/pw_reset" />
 
             <TextView
                 android:id="@+id/password_found"
-                android:layout_width="160dp"
+                android:layout_width="wrap_content"
                 android:layout_height="35dp"
-                android:layout_marginStart="88dp"
                 android:layout_marginTop="22dp"
+                android:layout_marginRight="60dp"
                 android:gravity="center"
                 android:text="Remember password?"
+                android:textSize="16sp"
                 android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/pw_reset" />
 
