--- a/PongGame/app/src/main/res/layout/fragment_login.xml
+++ b/PongGame/app/src/main/res/layout/fragment_login.xml
@@ -9,6 +9,19 @@
     android:orientation="vertical"
     tools:context=".fragments.LoginFragment">
 
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Please insert your credentials to access"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginTop="140dp"
+        app:layout_constraintBottom_toTopOf="@+id/username_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/icon_login_username"
         android:layout_width="wrap_content"
@@ -35,7 +48,7 @@
         android:id="@+id/username_login"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="300dp"
+        android:layout_marginBottom="200dp"
         android:hint="Email"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,10 +87,13 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:text="Forgot password?"
+        android:textStyle="bold"
+        android:textSize="15sp"
         android:textColor="@color/purple_700"
         app:layout_constraintEnd_toEndOf="@+id/password_login"
         app:layout_constraintTop_toBottomOf="@+id/password_login" />
 
+    <!--
     <com.sanojpunchihewa.glowbutton.GlowButton
         android:id="@+id/login_button"
         android:layout_width="360dp"
@@ -94,7 +110,6 @@
         app:pressedGlowSize="10dp"
         app:glowColor="@color/purple_500" />
 
-    <!--
     <Button
         android:id="@+id/login_button"
         android:layout_width="320dp"
@@ -108,28 +123,44 @@
         app:layout_constraintTop_toBottomOf="@+id/forgot_password_button" />
         -->
 
+    <ImageView
+        android:id="@+id/login_button"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"
+        app:srcCompat="@drawable/login"
+        android:clickable="true"
+        android:focusable="true" />
+
     <TextView
         android:id="@+id/not_registered_text"
-        android:layout_width="160dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="22dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:layout_marginRight="65dp"
         android:gravity="center"
         android:text="Not registered yet?"
+        android:textSize="16sp"
         android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_button" />
 
     <Button
         android:id="@+id/signup_button"
-        android:layout_width="160dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="22dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="130dp"
         android:background="@android:color/transparent"
         android:gravity="center"
         android:text="Sign up"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:textColor="@color/purple_700"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_button" />
 
