--- a/PongGame/app/src/main/res/layout/item_view.xml
+++ b/PongGame/app/src/main/res/layout/item_view.xml
@@ -60,7 +60,7 @@
 
         <TextView
             android:id="@+id/user_ranking_position"
-            android:layout_width="wrap_content"
+            android:layout_width="20dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text=""
