--- a/PongGame/app/src/main/res/layout/activity_pong.xml
+++ b/PongGame/app/src/main/res/layout/activity_pong.xml
@@ -54,7 +54,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="72dp"
-        android:text="Ready!"
+        android:text="Tap to play"
         android:textColor="#fff"
         android:textSize="35sp"
         android:textStyle="bold"
