--- a/PongGame/app/src/main/res/layout/fragment_user_profile.xml
+++ b/PongGame/app/src/main/res/layout/fragment_user_profile.xml
@@ -53,6 +53,7 @@
         android:layout_marginStart="44dp"
         android:layout_marginTop="50dp"
         android:text="Email"
+        android:textColor="@color/purple_700"
         android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,6 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="Username"
+        android:textColor="@color/purple_700"
         android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@id/user_email"
@@ -117,6 +119,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="Total score"
+        android:textColor="@color/purple_700"
         android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@id/user_username"
